# AmusementPark-Madhav-Sai

./: CMakeLists.txt  README.md  a.out  bmpLoader.cpp  bmpLoader.h  changes.txt  configs.h  cpp_libs.h  include_libs.h  index.h  libs.h  main.cpp  push.sh  run.sh
sgi images/: abhinandan.sgi
sgi_images/: corybooker.csv  laphonza.csv  plant_texture1.sgi  treetext.sgi
src/: configs.h
src/background/: background.cpp  background.h
src/human/: human.cpp  human.h
src/light/: light.cpp  light.h
src/objects/: objects.cpp  objects.h
src/rides/: rides.cpp  rides.h
src/shapes/: shapes.cpp  shapes.h
src/tree/: tree.cpp  tree.h
src/utils/: utils.cpp  utils.h
